Web-access 2.0. Fix contrast errors and remove redudant title text

--- a/pythonz/apps/static_src/pythonz.less
+++ b/pythonz/apps/static_src/pythonz.less
@@ -445,3 +445,55 @@ nav .submenu {
   display: inline-block;
   vertical-align: middle;
 }
+
+.navbar-light .navbar-nav .nav-link{
+    color: #4f4f4f !important;
+}
+
+.navbar-light .navbar-nav .active>.nav-link{
+    color: #4f4f4f !important;
+    font-weight: bold !important;
+}
+
+.dropdown-item{
+    color: #4f4f4f !important;
+}
+
+.breadcrumb-item.active {
+    color:#4f4f4f !important;
+}
+
+#rss{
+    color: #0F446E !important;
+}
+
+.page-item.active .page-link
+{
+    background-color: #0050A7 !important;
+    color: white !important;
+}
+
+.page-link{
+    color: #0050A7 !important;
+}
+
+.badge-success
+{
+    background-color: #155D25 !important;
+}
+
+.badge-info, .badge-primary {
+    background-color: #0E5E6B !important;
+}
+
+.cl__gray {
+    color: #555555;
+}
+
+#pep-href{
+    color: #254D6F !important;
+}
+
+#box-tags .title {
+    color: #555555 !important;
+}
